src/objects/User_Survey__c.object
<CustomObject>
    <fields>
        <fullName>ACET_Functionality__c</fullName>
        <defaultValue>&quot;What are your thoughts on the below ACET functionalities?&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>ACET Functionality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACET_Lightning_Functionality__c</fullName>
        <defaultValue>&quot;What are your feelings regarding the below ACET Lightning functionalities?&quot;</defaultValue>
        <description>What are your feelings regarding the below ACET Lightning functionalities?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ACET Lightning Functionality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACET_Pages__c</fullName>
        <defaultValue>&quot;How would you rate the usability of the following pages:&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>ACET Pages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACET__c</fullName>
        <inlineHelpText>0 - difficult to use
5 - easy to use</inlineHelpText>
        <label>ACET</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_Autodoc_Information__c</fullName>
        <label>Ability to Autodoc Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_Document_A_Case__c</fullName>
        <label>Ability to Document A Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_View_A4Me_Opportunities__c</fullName>
        <label>Ability to View A4Me Opportunities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don’t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don’t Know What It is</fullName>
                </value>
                <value>
                    <fullName>Dislike it</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_View_Case_History__c</fullName>
        <label>Ability to View Case History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_View_Info_on_Case_Details__c</fullName>
        <label>Ability to View Info on Case Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_View_Subject_Originator_Info__c</fullName>
        <inlineHelpText>Ability to view subject/originator information throughout the application</inlineHelpText>
        <label>Ability to View Subject/Originator Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ability_to_View_and_Resend_Documents__c</fullName>
        <inlineHelpText>EOBs/PRAs/Letters</inlineHelpText>
        <label>Ability to View and Resend Documents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accumulators_Section_on_Member_Overview__c</fullName>
        <label>Accumulators Section on Member Overview</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <defaultValue>&quot;If you gave a rating of 0-2 indicating difficult to use, please explain below:&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Automated_Case_Routing__c</fullName>
        <label>Automated Case Routing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Turnaround_Times_Entitlements__c</fullName>
        <label>Case Turnaround Times (Entitlements)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centralized_button_location__c</fullName>
        <label>Centralized button location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Box_on_Member_Overview__c</fullName>
        <label>Comment Box on Member Overview</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter information if you rated something as difficult</inlineHelpText>
        <label>Comments</label>
        <length>511</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condensed_Coverage_Lines__c</fullName>
        <inlineHelpText>Single coverage line if member stays on same benefit plan for multiple years.</inlineHelpText>
        <label>Condensed Coverage Lines</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creating_a_Case_from_Member_Overview__c</fullName>
        <label>Creating a Case from Member Overview</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>&quot;If you rated something difficult to use, please explain below:&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Search__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Group Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Impression__c</fullName>
        <defaultValue>&quot;Based on your initial impressions, how would you rate using ACET (0 being difficult to use and 5 being easy to use)?&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Impression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Impressions__c</fullName>
        <defaultValue>&quot;Based on your initial impression, how would you rate using the ACET Lightning experience (0 being difficult to use and 5 being easy to use)?&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Impressions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Overview__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Member Overview</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Search__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Member Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_helpful_part_of_ACET__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Let us know what you find in ACET that is most helpful to you</inlineHelpText>
        <label>Most helpful part of ACET?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Panel__c</fullName>
        <label>Notes Panel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Benefits__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Plan Benefits</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer_Search__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Producer Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Lookup__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Provider Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Search__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>Provider Search</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relocation_of_Eligibility_Details__c</fullName>
        <inlineHelpText>View Eligibility topic removed - information now on Overview and routing options moved to Member Other Inquiry</inlineHelpText>
        <label>Relocation of Eligibility Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Removal_of_Consumer_Dashboard_Auto_Pop__c</fullName>
        <label>Removal of Consumer Dashboard Auto-Pop</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Materials_forms_ID_cards__c</fullName>
        <label>Request Materials (forms/ID cards)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Love It</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Really Use It</fullName>
                </value>
                <value>
                    <fullName>Not Sure What It Is</fullName>
                </value>
                <value>
                    <fullName>Dislike It</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRS_Tracker__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>SRS Tracker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Feedback__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>User Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Authorizations__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>View Authorizations</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Claims__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>View Claims</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Eligibility__c</fullName>
        <inlineHelpText>0 - difficult to use 
5 - easy to use</inlineHelpText>
        <label>View Eligibility</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_are_your_thoughts_on_Lightning__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What are your thoughts on the Lightning experience and layout compared to Classic?</inlineHelpText>
        <label>What are your thoughts on Lightning?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_can_improve_the_most_in_ACET__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Let us know what you think can improve the most in ACET</inlineHelpText>
        <label>What can improve the most in ACET?</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Your_Thoughts__c</fullName>
        <defaultValue>&quot;Please enter your comments below:&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Your Thoughts</label>
        <type>TextArea</type>
    </fields>
    <label>User Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UserSurvey - {0000}</displayFormat>
        <label>User Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Surveys</pluralLabel>
    <recordTypes>
        <fullName>ACET_Classic</fullName>
        <active>true</active>
        <description>ACET Polaris survey for Salesforce Classic</description>
        <label>ACET Classic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Polaris_Lightning</fullName>
        <active>true</active>
        <description>User Survey for Polaris lightning users</description>
        <label>Polaris Lightning</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Difficult_to_Use</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 OR( 
 ISPICKVAL( View_Claims__c , &quot;0&quot;),
 ISPICKVAL( Plan_Benefits__c , &quot;0&quot;),
 ISPICKVAL( View_Eligibility__c  , &quot;0&quot;),
 ISPICKVAL( View_Authorizations__c , &quot;0&quot;),
 ISPICKVAL( Member_Search__c  , &quot;0&quot;),
 ISPICKVAL( Provider_Search__c  , &quot;0&quot;),
 ISPICKVAL( Group_Search__c  , &quot;0&quot;),
 ISPICKVAL( Producer_Search__c  , &quot;0&quot;)),
 Comments__c == &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please let us know why you rated something difficult to use.</errorMessage>
    </validationRules>
</CustomObject>